fix: correct dist.ini info error

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
-name=lua-liquid
-abstract= lua implementation of Liquid 
+name=liquid-lua
+abstract= a lua implementation of Liquid 
 author= chenxianyu2015
 is_original=yes
 license=2bsd
 lib_dir=lib
 doc_dir=lib
-repo_link=https://github.com/chenxianyu2015/lua-liquid
+repo_link=https://github.com/chenxianyu2015/liquid-lua
 main_module=lib/liquid.lua
